syntax = "proto3";

package evmos.ibc.xevm.v1;

option go_package = "github.com/tharsis/evmos/x/ibc/xevm/types";

import "evmos/ibc/xevm/v1/xevm.proto";
import "gogoproto/gogo.proto";

// GenesisState defines the ibc-evm genesis state
message GenesisState {
  string              port_id      = 1 [(gogoproto.moretags) = "yaml:\"port_id\""];
  Params params = 2 [(gogoproto.nullable) = false];
}
